dist/1.0/bin/sample/retrieveUnpackaged/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Duration of task processing in days</description>
        <formula>if (IsClosed = True, LastModifiedDate-CreatedDate, null)</formula>
        <inlineHelpText>Duration of task processing in days</inlineHelpText>
        <label>Task Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Order_No__c</fullName>
        <label>Email Order No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Info__c</fullName>
        <label>Error Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mass_Mailing_Session_ID__c</fullName>
        <label>Mass Mailing Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mass_Mailing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Mailing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_Date__c</fullName>
        <label>Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supplier_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplier Notification</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>